--- a/codigo/public/lucasm/package.json
+++ b/codigo/public/lucasm/package.json
@@ -1,21 +1,16 @@
 {
   "name": "lucasm",
   "version": "1.0.0",
-  "description": "API REST fake para testes locais",
+  "description": "API REST fake para testes locais com JSON Server",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "json-server --watch db.json --port 3000",
+    "dev": "json-server --watch db.json --port 3001"
   },
-  "keywords": [
-    "api",
-    "json",
-    "node",
-    "lucas"
-  ],
+  "keywords": ["api", "json", "json-server", "lucas", "fake-api"],
   "author": "Lucas M.",
-  "license": "MIT",
+  "license": "ICS",
   "dependencies": {
-    "json-server": "^1.0.0-beta.3"
+    "json-server": "^0.17.4"
   }
 }
